--- a/Fish/templates/base.html
+++ b/Fish/templates/base.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
+	<title>{{title}}</title>
+	<link type="text/css" href="{% static '/fishapp/css/styles.css' %}" rel="stylesheet" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<table class="table-page" border=0 cellpadding="0" cellspacing="0">
+<tr><td valign=top>
 {% block mainmenu %}
-<ul>
-    {% for m in menu %}
-    <li>{{ m }}</li>
-    {% endfor %}
-</ul>
+		<div class="header">
+			<ul id="mainmenu" class="mainmenu">
+{% for m in menu %}
+	{% if not forloop.last %}
+			<li><a href="#">{{m.title}}</a></li>
+	{% else %}
+			<li class="last"><a href="#">{{m.title}}</a></li>
+	{% endif %}
+{% endfor %}
+			</ul>
+			<div class="clear"></div>
+		</div>
 {% endblock mainmenu %}
+
+
+<table class="table-content" border=0 cellpadding="0" cellspacing="0">
+<tr>
+<!-- Sidebar слева -->
+	<td valign="top" class="left-chapters">
+	<ul id="leftchapters">
+		<li class="selected">Все категории</li>
+		<li><a href="#">Хищики</a></li>
+		<li><a href="#">Травоядные</a></li>
+		<li><a href="#">Всеядные</a></li>
+
+	</ul>
+</td>
+<!-- Конец Sidebar'а -->
+<td valign="top" class="content">
+	<!-- Хлебные крошки -->
+	{% block breadcrumbs %}
+	{% endblock %}
+
+<!-- Блок контента -->
+	<div class="content-text">
 {% block content %}
-{% endblock content %}
+{% endblock %}
+	</div>
+<!-- Конец блока контента -->
+
+</td></tr></table>
+</td></tr>
+<!-- Footer -->
+<tr><td valign=top>
+
+</td></tr></table>
+<!-- Конец footer'а и страницы -->
 </body>
 </html>
