--- a/Fish/templates/base.html
+++ b/Fish/templates/base.html
@@ -32,10 +32,20 @@
 <!-- Sidebar слева -->
 	<td valign="top" class="left-chapters">
 	<ul id="leftchapters">
+{% if cat_selected == 0 %}
 		<li class="selected">Все категории</li>
-		<li><a href="#">Хищики</a></li>
-		<li><a href="#">Травоядные</a></li>
-		<li><a href="#">Всеядные</a></li>
+	{% else %}
+		<li><a href="{% url 'home' %}">Все категории</a> </li>
+{% endif %}
+
+{% for c in cats %}
+		{% if c.pk == cat_selected %}
+			<li class="selected">{{ c.name }}</li>
+			{% else %}
+			<li><a href="{{ c.get_absolute_url }}">{{ c.name }}</a></li>
+
+	{% endif %}
+{% endfor %}
 
 	</ul>
 </td>
@@ -52,12 +62,7 @@
 	</div>
 <!-- Конец блока контента -->
 
-</td></tr></table>
-</td></tr>
-<!-- Footer -->
-<tr><td valign=top>
 
-</td></tr></table>
-<!-- Конец footer'а и страницы -->
+
 </body>
 </html>
